--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <head>...</head>
     <body>
         <!--Header-->
-        <h1>Hello World</h1>
+        <h1>Bartle Doo</h1>
     </body>
 </html>
