--- a/cloudiness.html
+++ b/cloudiness.html
@@ -55,7 +55,7 @@
         <div class="container jumbotron" style="margin-top: 20px;">
           <h2 style="text-align: center"> Cloudiness &nbsp;&nbsp; <i class="fas fa-cloud"></i> </h2>
             <p>
-              <img style="padding-bottom: 5%; float: left; max-width: 100%; height: auto;" src="Resources/Cloudiness.png" class="img-responsive">
+              <img style="padding-bottom: 5%; float: left; max-width: 100%; height: auto;" src="Resources/cloudiness.png" class="img-responsive">
               <div style="padding-top: 1%; text-align: justify">
                   There isn't a clear correlation between latitude and cloudiness. The only pattern that can be observed from thsi scatter plot,
                   is the tendency for data points to fall on 0, 20, 40, ~75, 90, and 100% cloudiness.
