--- a/cloudiness.html
+++ b/cloudiness.html
@@ -57,9 +57,9 @@
             <p>
               <img style="padding-bottom: 5%; float: left; max-width: 100%; height: auto;" src="Resources/cloudiness.png" class="img-responsive">
               <div style="padding-top: 1%; text-align: justify">
-                  There isn't a clear correlation between latitude and cloudiness. The only pattern that can be observed from thsi scatter plot,
+                  There isn't a clear correlation between latitude and cloudiness. The only pattern that can be observed from this scatter plot,
                   is the tendency for data points to fall on 0, 20, 40, ~75, 90, and 100% cloudiness.
-                  <br> This may be a result of the way "cloudiness" is quantified. This is done by estimating the number of oktas (eighths) of the sky are covered with clouds.  
+                  <br> This may be a result of the way "cloudiness" is quantified. This is done by estimating the number of oktas (eighths) of the sky that are covered with clouds.  
                   It appears that latitudes less than -40 degrees and above 90 degrees experience less cloudiness, however, it could also be the case 
                   that it is more unlikely to randomly import city coordinates near the North and South Poles. 
               </div>
