--- a/humidity.html
+++ b/humidity.html
@@ -59,7 +59,7 @@
               <div style="padding-top: 1%; text-align: justify">
                   Relative humidity compares the amount of gaseous water in the air relative to the maximum amount 
                   of water vapor that can be held in the air at a specific temperature. <br><br> This scatter plot shows that 
-                  near the equator, most of the data point reside on the upper portion of the scale. 
+                  near the equator, most of the data points reside on the upper portion of the scale. 
                   This makes sense since the equator receives the more direct energy from the sun. 
                   Higher temperatures allow gaseous water to remain in the air resulting in higher humidity percentage.
               </div>
