--- a/wind.html
+++ b/wind.html
@@ -57,7 +57,7 @@
             <p>
               <img style="padding-bottom: 5%; float: left; max-width: 100%; height: auto;" src="Resources/wind_speed.png" class="img-responsive">
               <div style="padding-top: 1%; text-align: justify">
-                  A common way to measure wind speed is using an anemometer which records the horizontal velocity of the wind.
+                  A common way to measure wind speed is by using an anemometer which records the horizontal velocity of the wind.
                   As with some of the other plots, there isn't a very clear pattern in this relationship. Based on this data, I cannot
                   reach any conclusions. 
         
